--- a/stocksentimentanalysis.ipynb
+++ b/stocksentimentanalysis.ipynb
@@ -6,7 +6,6 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMLg5ZQ4dS69bn7pioppJNS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 1,
       "metadata": {
         "id": "5NwW-o7qjFPD"
       },
@@ -65,18 +64,18 @@
           "height": 73
         },
         "id": "R0XfiopLpSu4",
-        "outputId": "f0d04a66-80c5-4cf9-e904-be5dac475410"
+        "outputId": "abe8697a-a260-4723-913f-f077cefb2b35"
       },
-      "execution_count": 45,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-72fea827-b63a-4436-84d6-64e57e7cf99e\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-52897ca4-0a45-4a66-90a3-00116c8b8880\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-72fea827-b63a-4436-84d6-64e57e7cf99e\">\n",
+              "     <output id=\"result-52897ca4-0a45-4a66-90a3-00116c8b8880\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -92,7 +91,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving Combined_News_DJIA.csv to Combined_News_DJIA (1).csv\n"
+            "Saving Combined_News_DJIA.csv to Combined_News_DJIA.csv\n"
           ]
         }
       ]
@@ -105,7 +104,7 @@
       "metadata": {
         "id": "xwYmDknZjMHK"
       },
-      "execution_count": 46,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -119,16 +118,16 @@
           "height": 756
         },
         "id": "3s27G4KBjeMv",
-        "outputId": "792dd2a9-b9c6-404d-9ec0-3cc7f65efb80"
+        "outputId": "a9238e44-5af1-4559-cbb6-7d7e04094b83"
       },
-      "execution_count": 47,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-403e0a4f-0b3e-4ed2-8a07-43d39805a4c0\">\n",
+              "  <div id=\"df-0a63efbf-c125-449d-b194-7a586cca7b3e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -331,7 +330,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-403e0a4f-0b3e-4ed2-8a07-43d39805a4c0')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a63efbf-c125-449d-b194-7a586cca7b3e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -382,12 +381,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-403e0a4f-0b3e-4ed2-8a07-43d39805a4c0 button.colab-df-convert');\n",
+              "          document.querySelector('#df-0a63efbf-c125-449d-b194-7a586cca7b3e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-403e0a4f-0b3e-4ed2-8a07-43d39805a4c0');\n",
+              "          const element = document.querySelector('#df-0a63efbf-c125-449d-b194-7a586cca7b3e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -420,7 +419,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 4
         }
       ]
     },
@@ -434,9 +433,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c9qqrn7Ip9Gd",
-        "outputId": "ff80e0ac-1361-4d54-ef84-c179db95451f"
+        "outputId": "add78edd-6c93-47b2-c56e-5151ca49aba2"
       },
-      "execution_count": 48,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -446,20 +445,20 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 5
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "train = df[df['Date'] > '19900101']\n",
-        "test = df[df['Date'] < '20083112']"
+        "train = df[df['Date'] < '20150101']\n",
+        "test = df[df['Date'] > '20141231']"
       ],
       "metadata": {
         "id": "nnj6oCkNqE_d"
       },
-      "execution_count": 55,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -472,7 +471,7 @@
       "metadata": {
         "id": "Y-d6QtEqq_Ps"
       },
-      "execution_count": 56,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -490,16 +489,16 @@
           "height": 774
         },
         "id": "-68FbU0arJGl",
-        "outputId": "413664c4-cc93-4f6e-d7df-6792c833c96a"
+        "outputId": "145363ff-9d2b-476a-99ed-d8fa71b8f64d"
       },
-      "execution_count": 57,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-528673c1-af5a-40fe-8642-8f62469f512c\">\n",
+              "  <div id=\"df-cee52033-7c09-4b56-9118-2a5b7d0f135d\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -690,7 +689,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-528673c1-af5a-40fe-8642-8f62469f512c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cee52033-7c09-4b56-9118-2a5b7d0f135d')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -741,12 +740,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-528673c1-af5a-40fe-8642-8f62469f512c button.colab-df-convert');\n",
+              "          document.querySelector('#df-cee52033-7c09-4b56-9118-2a5b7d0f135d button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-528673c1-af5a-40fe-8642-8f62469f512c');\n",
+              "          const element = document.querySelector('#df-cee52033-7c09-4b56-9118-2a5b7d0f135d');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -779,7 +778,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 57
+          "execution_count": 23
         }
       ]
     },
@@ -793,19 +792,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j60VzXNIraE8",
-        "outputId": "10c1b9fe-981a-4daf-f8e4-f98a61362216"
+        "outputId": "93df7448-b541-4127-a36f-96c3881821a9"
       },
-      "execution_count": 58,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(101, 27)"
+              "(378, 27)"
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 24
         }
       ]
     },
@@ -819,19 +818,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zzJ0WnK4tDXU",
-        "outputId": "eda7e46d-a13a-408e-f9aa-8ddebca8fab2"
+        "outputId": "9133ec34-e264-459f-ddd9-f490b398536f"
       },
-      "execution_count": 59,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(1989, 27)"
+              "(1863, 27)"
             ]
           },
           "metadata": {},
-          "execution_count": 59
+          "execution_count": 25
         }
       ]
     },
@@ -849,16 +848,16 @@
           "height": 284
         },
         "id": "cDxRd-JGtGCs",
-        "outputId": "a7a5f6f7-274f-4b62-bab3-ad9e4c409196"
+        "outputId": "d86607d5-b585-4d1a-bbd5-fe4ecda7eb50"
       },
-      "execution_count": 60,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-1e87c1f5-f921-4945-8189-3fb42a74b763\">\n",
+              "  <div id=\"df-860b735f-bbe5-4e1a-a452-9c6dfce7cf6a\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -937,7 +936,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e87c1f5-f921-4945-8189-3fb42a74b763')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-860b735f-bbe5-4e1a-a452-9c6dfce7cf6a')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -988,12 +987,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1e87c1f5-f921-4945-8189-3fb42a74b763 button.colab-df-convert');\n",
+              "          document.querySelector('#df-860b735f-bbe5-4e1a-a452-9c6dfce7cf6a button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1e87c1f5-f921-4945-8189-3fb42a74b763');\n",
+              "          const element = document.querySelector('#df-860b735f-bbe5-4e1a-a452-9c6dfce7cf6a');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1022,7 +1021,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 26
         }
       ]
     },
@@ -1037,9 +1036,9 @@
           "height": 140
         },
         "id": "dVNlBVNTuder",
-        "outputId": "3257c2f8-2922-4fdc-c776-4968749a4fd9"
+        "outputId": "332b8f65-8e08-432f-9d96-71e75352a598"
       },
-      "execution_count": 61,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1052,7 +1051,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 61
+          "execution_count": 27
         }
       ]
     },
@@ -1066,7 +1065,7 @@
       "metadata": {
         "id": "gzsQ8-xRup0L"
       },
-      "execution_count": 62,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1080,9 +1079,9 @@
           "height": 140
         },
         "id": "RnK3idV1uyyb",
-        "outputId": "636ede12-7615-462b-d6d2-d2fe2827361a"
+        "outputId": "3cf79a8a-6560-4150-b0eb-5c64f2c8f0a6"
       },
-      "execution_count": 63,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1095,7 +1094,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 63
+          "execution_count": 29
         }
       ]
     },
@@ -1108,7 +1107,7 @@
       "metadata": {
         "id": "3TcITPvLu5ob"
       },
-      "execution_count": 65,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1121,7 +1120,7 @@
       "metadata": {
         "id": "60QTyG11vHtC"
       },
-      "execution_count": 66,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1136,9 +1135,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nkw-uPbbwFm6",
-        "outputId": "78e23fc5-a543-4c08-c107-128e2c8cadba"
+        "outputId": "9a07980a-1f08-44a0-f78f-174822c89136"
       },
-      "execution_count": 67,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1148,7 +1147,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 67
+          "execution_count": 32
         }
       ]
     },
@@ -1165,7 +1164,7 @@
       "metadata": {
         "id": "WSiWs0sAxs78"
       },
-      "execution_count": 73,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1177,7 +1176,7 @@
       "metadata": {
         "id": "GVzuRIgFwV7q"
       },
-      "execution_count": 74,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1195,25 +1194,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NaV97c8cwtC5",
-        "outputId": "a23c5aea-bde6-4a30-fcac-769412a9215b"
+        "outputId": "45849ba2-9085-4eb6-c9cf-e97844376a81"
       },
-      "execution_count": 75,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[54  0]\n",
-            " [ 0 47]]\n",
-            "1.0\n",
+            "[[133  53]\n",
+            " [  1 191]]\n",
+            "0.8571428571428571\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           0       1.00      1.00      1.00        54\n",
-            "           1       1.00      1.00      1.00        47\n",
+            "           0       0.99      0.72      0.83       186\n",
+            "           1       0.78      0.99      0.88       192\n",
             "\n",
-            "    accuracy                           1.00       101\n",
-            "   macro avg       1.00      1.00      1.00       101\n",
-            "weighted avg       1.00      1.00      1.00       101\n",
+            "    accuracy                           0.86       378\n",
+            "   macro avg       0.89      0.85      0.85       378\n",
+            "weighted avg       0.89      0.86      0.85       378\n",
             "\n"
           ]
         }
@@ -1227,7 +1226,7 @@
       "metadata": {
         "id": "o_-4NBkHwyE5"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     }
   ]
